# app

./: .gitattributes  .gitignore  .license.txt  .prettierignore  CHANGELOG.md  CONTRIBUTORS.yaml  Cargo.toml  LICENSE  README.md  build.rs  pubspec.yaml  remote-open.sh  remote-push.sh  review.sh
.github/workflows/: release-build.yaml  release.yaml  review.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/store/worktrace/work/: MainActivity.kt
generator/: Cargo.toml
generator/src/: fmt.rs  lib.rs  license.rs
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
proto/: hello.proto
src/: env.rs  lib.rs  main.rs
src/terminal/: mod.rs
src/terminal/decorate/: font.rs
src/utils/: mod.rs
src/utils/terminal/: color.rs  font.rs  mod.rs
src/utils/terminal/color/: build_in.rs  custom.rs  mod.rs  shared.rs
web/: index.html
windows/runner/: Runner.rc
worktrace-build/: CHANGELOG.md  Cargo.toml  README.md
worktrace-build/src/: changelog.rs  flutter.rs  fmt.rs  lib.rs  license.rs  packages.rs  proto.rs
worktrace-build/src/flutter/: install.rs  mod.rs  version.rs
