[package]
name = "worktrace"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "worktrace"
path = "src/lib.rs"

[[bin]]
name = "worktrace"
path = "src/main.rs"

[workspace]
members = ["generator"]

[dependencies]
axum = "0.8.3"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
worktrace_generator = { version = "0.1.0", path = "generator" }

[build-dependencies]
worktrace_generator = { version = "0.1.0", path = "generator" }
