[package]
name = "worktrace"
description = "An application and network to trace what we've worked."
repository = "https://github.com/worktrace/app"
license = "MulanPSL-2.0"
version = "0.1.1"
edition = "2024"

include = [
  "/src",
  "/.license.txt",
  "/build.rs",
  "/Cargo.toml",
  "/CONTRIBUTORS.yaml",
  "/LICENSE",
  "/README.md",
]

[lib]
crate-type = ["lib", "cdylib"]
name = "worktrace"
path = "src/lib.rs"

[[bin]]
name = "worktrace"
path = "src/main.rs"

[workspace]
members = ["worktrace-build"]

[dependencies]
axum = "0.8.3"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
worktrace-build = { version = "0.1.0", path = "worktrace-build" }
