[package]
name = "worktrace-build"
description = "Build script utilities behind the WorkTrace crate."
repository = "https://github.com/worktrace/app"
license = "MulanPSL-2.0"
version = "0.1.0"
edition = "2024"
include = [
  "/src",
  "/Cargo.toml",
  "/CONTRIBUTORS.yaml",
  "/LICENSE",
  "/README.md",
]

[dependencies]
tonic-build = "0.13.0"
walkdir = "2.5.0"
