[package]
name = "worktrace-build"
description = "Build script utilities behind the WorkTrace crate."
repository = "https://github.com/worktrace/app"
license = "MulanPSL-2.0"
version = "0.1.1"
edition = "2024"
include = [
  "/src",
  "/Cargo.toml",
  "/CONTRIBUTORS.yaml",
  "/LICENSE",
  "/README.md",
]

[features]
default = []
full = ["default", "flutter", "proto"]
flutter = ["dep:saphyr", "dep:semver"]
proto = ["dep:tonic-build", "dep:walkdir"]

[dependencies]
saphyr = { version = "0.0.4", optional = true }
semver = { version = "1.0.26", optional = true }
tonic-build = { version = "0.13.0", optional = true }
walkdir = { version = "2.5.0", optional = true }
